# esp32-cam

./: .gitignore  .gitmodules  CMakeLists.txt  build-with-sonar.sh  sdconfig.defaults  sdkconfig.defaults  sonar-project.properties
.github/workflows/: main.yml  pullrequest.yml
components/aws-iot-sdk/: CMakeLists.txt  README.md  component.mk
components/aws-iot-sdk/port/: port.c
components/aws-iot-sdk/port/include/: core_mqtt_config.h  logging.h  port.h
components/esp-rtsp/: CMakeLists.txt  esp-rtsp.c  jpeg.c  rtp-udp.c  rtsp-parser.c  rtsp-server.c  server.c
components/esp-rtsp/include/: esp-rtsp.h  rtp-udp.h
components/esp-rtsp/priv/: esp-rtsp-common.h  esp-rtsp-priv.h  rtp-udp.h
components/esp-rtsp/tests/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  camera.c  certs.c  common.h  esp32cam_pins.h  main.c  mqtt.c  sdcard.c  wifi.c
main/certs/: README.md
